GNOME Bugzilla – Bug 752871
Search does not work with the --files option
Last modified: 2015-07-31 14:39:24 UTC
Tracker search doesn't work, if the option --files is provided. If the option --all is provided instead of --files - it will work. Example: tracker search --files myExpression Error: Could not get search results, 1.68: syntax error, expected `}' Workaround: tracker search --all myExpression Versions: * OS - Fedora 22 * Tracker 1.4.0
commit 2283a08ad6ed4856ad906342a67c9d7f519f5059 Author: Martyn Russell <martyn@lanedo.com> Date: Fri Jul 31 15:37:53 2015 +0100 tracker: Fixed search with -f <arg> or --files <arg>, broken expression https://bugzilla.gnome.org/show_bug.cgi?id=752871