tracker: Fixed search with -f <arg> or --files <arg>, broken expression

https://bugzilla.gnome.org/show_bug.cgi?id=752871